--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,6 @@ repositories {
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.18.1-39.0.7'
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     runtimeOnly fg.deobf("mezz.jei:jei-1.18.1:9.1.1.48")
     compileOnly fg.deobf("appeng:appliedenergistics2:10.0.0-alpha.7")
     runtimeOnly fg.deobf("appeng:appliedenergistics2:10.0.0-alpha.7")
@@ -116,7 +115,8 @@ jar {
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
                 //"Implementation-Vendor": "aeinfinitybooster authors",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs"            : "AEInfinityBooster.mixins.json"
         ])
     }
 }
