--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: "com.matthewprenger.cursegradle"
 apply plugin: 'maven-publish'
 
 group = 'uk.co.hexeption'
-version = '1.18.1-1.0.0'
+version = '1.16.5-1.0.0'
 def env = System.getenv()
 if (env.GITHUB_RUN_NUMBER) {
     version = version + "+" + "${env.GITHUB_RUN_NUMBER}"
@@ -26,12 +26,12 @@ if (env.GITHUB_RUN_NUMBER) {
 
 java {
     archivesBaseName = 'AEInfinityBooster'
-    toolchain.languageVersion = JavaLanguageVersion.of(17)
+    toolchain.languageVersion = JavaLanguageVersion.of(8)
 }
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-    mappings channel: 'official', version: '1.18.1'
+    mappings channel: 'official', version: '1.16.5'
 
     runs {
         client {
@@ -100,11 +100,11 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.18.1-39.0.7'
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.22'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    runtimeOnly fg.deobf("mezz.jei:jei-1.18.1:9.1.1.48")
-    compileOnly fg.deobf("appeng:appliedenergistics2:10.0.0-alpha.7")
-    runtimeOnly fg.deobf("appeng:appliedenergistics2:10.0.0-alpha.7")
+    runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:7.7.1.138")
+    compileOnly fg.deobf("appeng:appliedenergistics2:8.4.4")
+    runtimeOnly fg.deobf("appeng:appliedenergistics2:8.4.4")
 }
 
 jar {
@@ -148,7 +148,7 @@ curseforge {
         id = '559313'
         changelog = 'A changelog can be found at https://github.com/Hexeption/AEInfinityBooster'
         releaseType = 'release'
-        addGameVersion '1.18'
+        addGameVersion '1.16'
 
         mainArtifact(jar) {
             displayName = "AEInfinityBooster v$version"
@@ -196,7 +196,7 @@ task publishModrinth (type: TaskModrinthUpload){
     changelog = 'A changelog can be found at https://github.com/Hexeption/AEInfinityBooster'
     versionNumber = "$version"
     uploadFile = jar
-    addGameVersion("1.18.1")
+    addGameVersion("1.16.5")
     addLoader('forge')
 }
 
