--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader = "javafml" #mandatory
-loaderVersion = "[43,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
+loaderVersion = "[44,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 license = "GNU Lesser General Public License"
 [[mods]] #mandatory
 modId = "aeinfinitybooster" #mandatory
@@ -11,18 +11,18 @@ description = '''
 [[dependencies.aeinfinitybooster]] #optional
 modId = "forge" #mandatory
 mandatory = true #mandatory
-versionRange = "[43,)" #mandatory
+versionRange = "[44,)" #mandatory
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.aeinfinitybooster]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19.2,)"
+versionRange = "[1.19.3,)"
 ordering = "NONE"
 side = "BOTH"
 [[dependencies.aeinfinitybooster]]
 modId = "ae2"
-versionRange = "[12.1.1-alpha,)"
+versionRange = "[13.0.9-beta,)"
 mandatory = true
 ordering = "AFTER"
 side = "BOTH"
