--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.+', changing: true
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
         classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.4.0"
         classpath group: 'gradle.plugin.com.modrinth.minotaur', name: 'Minotaur', version: '1.1.0'
@@ -18,7 +18,7 @@ apply plugin: "com.matthewprenger.cursegradle"
 apply plugin: 'maven-publish'
 
 group = 'uk.co.hexeption'
-version = '1.19.3-1.3.0'
+version = '1.20.1-1.0.0'
 def env = System.getenv()
 if (env.GITHUB_RUN_NUMBER) {
     version = version + "+" + "${env.GITHUB_RUN_NUMBER}"
@@ -31,7 +31,7 @@ java {
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-    mappings channel: 'official', version: '1.19.3'
+    mappings channel: 'official', version: '1.20.1'
 
     runs {
         client {
@@ -105,11 +105,11 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.19.3-44.1.8'
+    minecraft 'net.minecraftforge:forge:1.20.1-47.0.3'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    runtimeOnly fg.deobf("mezz.jei:jei-1.19.3-forge:12.1.1.13")
-    compileOnly fg.deobf("appeng:appliedenergistics2-forge:13.0.9-beta")
-    runtimeOnly fg.deobf("appeng:appliedenergistics2-forge:13.0.9-beta")
+    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:15.0.0.12")
+    compileOnly fg.deobf("appeng:appliedenergistics2-forge:15.0.2-alpha")
+    runtimeOnly fg.deobf("appeng:appliedenergistics2-forge:15.0.2-alpha")
 }
 
 jar {
@@ -134,13 +134,13 @@ mixin {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
 task deobfJar(type: Jar) {
     from sourceSets.main.output
-    classifier 'deobf'
+    archiveClassifier = 'deobf'
 }
 
 artifacts {
@@ -206,7 +206,7 @@ task publishModrinth (type: TaskModrinthUpload){
     changelog = 'A changelog can be found at https://github.com/Hexeption/AEInfinityBooster'
     versionNumber = "$version"
     uploadFile = jar
-    addGameVersion("1.19.3")
+    addGameVersion("1.20.2")
     addLoader('forge')
 }
 
