--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '6.+', changing: true
         classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
         classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.4.0"
-        classpath group: 'gradle.plugin.com.modrinth.minotaur', name: 'Minotaur', version: '1.1.0'
+        classpath group: 'com.modrinth.minotaur', name: 'Minotaur', version: '2+'
     }
 }
 
@@ -16,6 +16,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: "com.matthewprenger.cursegradle"
 apply plugin: 'maven-publish'
+apply plugin: 'com.modrinth.minotaur'
 
 group = 'uk.co.hexeption'
 version = '1.20.1-1.0.0'
@@ -195,9 +196,7 @@ publishing {
     }
 }
 
-import com.modrinth.minotaur.TaskModrinthUpload
-
-task publishModrinth (type: TaskModrinthUpload){
+modrinth {
     if (env.MODRINTH_API_KEY) {
         token = env.MODRINTH_API_KEY
     }
@@ -206,7 +205,10 @@ task publishModrinth (type: TaskModrinthUpload){
     changelog = 'A changelog can be found at https://github.com/Hexeption/AEInfinityBooster'
     versionNumber = "$version"
     uploadFile = jar
-    addGameVersion("1.20.2")
-    addLoader('forge')
+    gameVersions = ["1.20.2"]
+    loaders = ["forge"]
+    dependencies {
+        required.version "ae2", "forge-15.0.2-alpha"
+    }
 }
 
