--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: gradle/wrapper-validation-action@v1.0.3
       - run: chmod +x ./gradlew
-      - run: ./gradlew clean build publish curseforge publishModrinth
+      - run: ./gradlew clean build publish curseforge modrinth
         env:
           REPO_PASSWORD: ${{ secrets.REPO_PASSWORD }}
           CURSE_API_KEY: ${{ secrets.CURSE_API_KEY }}
